[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Helm.gd" type="Script" id=1]
[ext_resource path="res://Scripts/1PCombiHelmShip.gd" type="Script" id=2]
[ext_resource path="res://assets/unnamed-4.png" type="Texture" id=3]
[ext_resource path="res://Scenes/1PShip.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/pulse1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Players/Player1.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/1pship.png" type="Texture" id=7]
[ext_resource path="res://Scenes/1PNavTerminal.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/HitboxIndicator.png" type="Texture" id=9]

[sub_resource type="Animation" id=2]
resource_name = "Pulse"
length = 0.16
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -322.429, -6.00164 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.99, 0.99 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.858824, 0.858824, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "StopStart"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.9999
height = 52.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.301961 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Engine" type="Area2D" parent="."]
position = Vector2( -1, 1 )
rotation = -1.5708
z_index = -1

[node name="Visible" type="Sprite" parent="Engine"]
visible = false
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( -271, 1 )
scale = Vector2( 0.99, 0.99 )
z_index = -1
texture = ExtResource( 5 )
flip_v = true
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Engine/Visible"]
autoplay = "StopStart"
anims/Pulse = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/StopStart = SubResource( 4 )

[node name="Base" type="Sprite" parent="Engine"]
position = Vector2( 1, 1 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="1PShip" parent="Engine" instance=ExtResource( 4 )]
position = Vector2( -1, -2.38419e-07 )
rotation = 1.5708

[node name="NavTerminal" parent="Engine" instance=ExtResource( 8 )]
position = Vector2( -5.96046e-08, 1 )
rotation = 1.5708

[node name="Helm" type="Area2D" parent="Engine"]
position = Vector2( -5.96046e-08, 1 )
rotation = 1.5708
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engine/Helm"]
position = Vector2( 0, -88 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Player1" parent="Engine" instance=ExtResource( 6 )]
position = Vector2( 2, 1.00001 )
rotation = 1.5708

[node name="gun" type="Sprite" parent="Engine"]
position = Vector2( 150, 0.000542939 )
rotation = 3.57628e-06
z_index = -1
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.00002, -3.5 )
scale = Vector2( 1.1125, 1.10312 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "pulse"
playback_speed = 0.25
anims/RESET = SubResource( 5 )
anims/pulse = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 5, -24.7781 )
scale = Vector2( 0.7, 0.597283 )
polygon = PoolVector2Array( -170, -174.494, -111, -219, -46, -242, -3, -244, 45, -242, 122, -211, 169, -166, 157, -152, 104, -203, 38, -224, -49, -220, -103, -193, -157.143, -162.774 )
one_way_collision = true

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 42 )
rotation = 3.14159
scale = Vector2( 0.7, 0.528319 )
polygon = PoolVector2Array( -167, -172, -111, -219, -46, -242, 45, -242, 122, -211, 169, -166, 157, -152, 104, -203, 38, -224, -49, -220, -103, -193, -151, -155 )
one_way_collision = true

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="."]
position = Vector2( -19.3339, 1.00003 )
rotation = -1.5708
scale = Vector2( 0.7, 0.626576 )
polygon = PoolVector2Array( -174.736, -163.159, -111, -219, -46, -242, 45, -242, 122, -211, 182.106, -157.894, 166.316, -143.157, 104, -203, 38, -224, -2.10525, -224.211, -49, -220, -103, -193, -165.263, -150.527 )
one_way_collision = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2( 29.401, 5.00004 )
rotation = 1.5708
scale = Vector2( 0.7, 0.600725 )
polygon = PoolVector2Array( -180.001, -163.157, -111, -219, -46, -242, -8.8889, -246.667, 45, -242, 122, -211, 169.999, -154.146, 162.105, -145.264, 104, -203, 38, -224, -49, -220, -103, -193, -165.264, -151.578 )
one_way_collision = true

[connection signal="area_entered" from="Engine" to="." method="_on_Engine_area_entered"]
[connection signal="area_entered" from="Engine/Helm" to="." method="_on_Helm_area_entered"]
[connection signal="area_exited" from="Engine/Helm" to="." method="_on_Helm_area_exited"]
